tests/react_custom_funs/react_custom_funs.exp
Error: create_element.js:7
  7: React.createElement(); // Error: Needs a minimum of two arguments.
     ^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`. React.createElement() must be passed at least two arguments.

Error: create_element.js:8
  8: React.createElement('div'); // Error: Needs a minimum of two arguments.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`. React.createElement() must be passed at least two arguments.

Error: create_element.js:9
  9: React.createElement(42); // Error: Needs a minimum of two arguments.
     ^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`. React.createElement() must be passed at least two arguments.

Error: create_element.js:11
 11: React.createElement(42, {}); // Error: Number is not a valid component type.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`. Expected React component instead of
 11: React.createElement(42, {}); // Error: Number is not a valid component type.
                         ^^ number

Error: create_element.js:12
 12: React.createElement({}, {}); // Error: Object is not a valid component type.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`. Expected React component instead of
 12: React.createElement({}, {}); // Error: Object is not a valid component type.
                         ^^ object literal

Error: create_element.js:20
                            v
 20: React.createElement(A, {
 21:   foo: 42,
 22:   bar: 'Hello, world!', // Error: `bar` is a string.
 23: });
     ^ object literal. This type is incompatible with
 15: class A extends React.Component<{foo: number, bar: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
     22:   bar: 'Hello, world!', // Error: `bar` is a string.
                ^^^^^^^^^^^^^^^ string. This type is incompatible with
     15: class A extends React.Component<{foo: number, bar: number}> {}
                                                            ^^^^^^ number

Error: create_element.js:24
     v-----------------------
 24: React.createElement(B, {
 25:   foo: 42,
 26:   bar: 'Hello, world!', // Error: `bar` is a string.
 27: });
     -^ object literal. This type is incompatible with the expected param type of
 16: function B(props: {foo: number, bar: number}) {}
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
     26:   bar: 'Hello, world!', // Error: `bar` is a string.
                ^^^^^^^^^^^^^^^ string. This type is incompatible with
     16: function B(props: {foo: number, bar: number}) {}
                                              ^^^^^^ number

Error: create_element.js:28
 28: React.createElement(A, {foo: 42}); // Error: `bar` is missing.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 15: class A extends React.Component<{foo: number, bar: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `bar`. Property not found in
 28: React.createElement(A, {foo: 42}); // Error: `bar` is missing.
                            ^^^^^^^^^ object literal

Error: create_element.js:29
 29: React.createElement(B, {foo: 42}); // Error: `bar` is missing.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 16: function B(props: {foo: number, bar: number}) {}
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `bar`. Property not found in
 29: React.createElement(B, {foo: 42}); // Error: `bar` is missing.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal

Error: create_element.js:34
 34: (React.createElement(A, {foo: 1, bar: 2}).props.foo: boolean); // Error: `foo`
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 34: (React.createElement(A, {foo: 1, bar: 2}).props.foo: boolean); // Error: `foo`
                                                          ^^^^^^^ boolean

Error: create_element.js:36
 36: (React.createElement(B, {foo: 1, bar: 2}).props.foo: boolean); // Error: `foo`
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number. This type is incompatible with
 36: (React.createElement(B, {foo: 1, bar: 2}).props.foo: boolean); // Error: `foo`
                                                          ^^^^^^^ boolean

Error: create_element.js:38
 38: React.createElement(A, {foo: 1, bar: 2}).nope; // Error: `nope` does not exist.
                                              ^^^^ property `nope`. Property not found in
                                                                  v-
158: declare type React$Element<ElementType: React$ElementType> = {|
159:   +type: ElementType;
160:   +props: React$ElementProps<ElementType>;
...:
163: |};
     -^ object type. See lib: <BUILTINS>/react.js:158

Error: create_element.js:39
 39: React.createElement(B, {foo: 1, bar: 2}).nope; // Error: `nope` does not exist.
                                              ^^^^ property `nope`. Property not found in
                                                                  v-
158: declare type React$Element<ElementType: React$ElementType> = {|
159:   +type: ElementType;
160:   +props: React$ElementProps<ElementType>;
...:
163: |};
     -^ object type. See lib: <BUILTINS>/react.js:158

Error: create_element.js:49
                            v
 49: React.createElement(C, {
 50:   foo: 42,
 51:   bar: 'Hello, world!', // Error: `bar` is a string.
 52: });
     ^ object literal. This type is incompatible with
 41: class C extends React.Component<{foo: number, bar: number}> {
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
     51:   bar: 'Hello, world!', // Error: `bar` is a string.
                ^^^^^^^^^^^^^^^ string. This type is incompatible with
     41: class C extends React.Component<{foo: number, bar: number}> {
                                                            ^^^^^^ number

Error: create_element.js:53
     v-----------------------
 53: React.createElement(D, {
 54:   foo: 42,
 55:   bar: 'Hello, world!', // Error: `bar` is a string.
 56: });
     -^ object literal. This type is incompatible with the expected param type of
 44: function D(props: {foo: number, bar: number}) {}
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
     55:   bar: 'Hello, world!', // Error: `bar` is a string.
                ^^^^^^^^^^^^^^^ string. This type is incompatible with
     44: function D(props: {foo: number, bar: number}) {}
                                              ^^^^^^ number

Error: create_element.js:65
 65: React.createElement(E, {}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 64: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 65: React.createElement(E, {}); // Error
                            ^^ object literal

Error: create_element.js:67
 67: React.createElement(E, {}, 1, 2); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 64: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     67: React.createElement(E, {}, 1, 2); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
     64: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:68
 68: React.createElement(E, {}, 1, 2, 3); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 64: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     68: React.createElement(E, {}, 1, 2, 3); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
     64: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:69
 69: React.createElement(E, {}, [1, 2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 64: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     69: React.createElement(E, {}, [1, 2]); // Error
                                    ^^^^^^ array literal. This type is incompatible with
     64: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:70
 70: React.createElement(E, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 64: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     70: React.createElement(E, {}, [1, 2], [3, 4]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
     64: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:71
 71: React.createElement(E, {}, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 64: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 71: React.createElement(E, {}, ...[]); // Error
                            ^^ object literal

Error: create_element.js:73
 73: React.createElement(E, {}, ...[1, 2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 64: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     73: React.createElement(E, {}, ...[1, 2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
     64: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:74
 74: React.createElement(E, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 64: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     74: React.createElement(E, {}, ...(any: Array<number>)); // Error
                                             ^^^^^^^^^^^^^ React children array, undefined, or array. This type is incompatible with
     64: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:74
 74: React.createElement(E, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 64: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     74: React.createElement(E, {}, ...(any: Array<number>)); // Error
                                             ^^^^^^^^^^^^^ undefined. This type is incompatible with
     64: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:76
 76: React.createElement(E, {}, 1, ...[2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 64: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     76: React.createElement(E, {}, 1, ...[2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
     64: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:77
 77: React.createElement(E, {}, 1, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 64: class E extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     77: React.createElement(E, {}, 1, ...(any: Array<number>)); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array or number. This type is incompatible with
     64: class E extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:80
 80: React.createElement(F, {}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 79: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 80: React.createElement(F, {}); // Error
                            ^^ object literal

Error: create_element.js:81
 81: React.createElement(F, {}, 1); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 79: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     81: React.createElement(F, {}, 1); // Error
                                    ^ number. This type is incompatible with
     79: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:85
 85: React.createElement(F, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 85: React.createElement(F, {}, [1, 2], [3, 4]); // Error
                                ^^^^^^ array literal. This type is incompatible with
 79: class F extends React.Component<{children: Array<number>}> {}
                                                      ^^^^^^ number

Error: create_element.js:85
 85: React.createElement(F, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 85: React.createElement(F, {}, [1, 2], [3, 4]); // Error
                                        ^^^^^^ array literal. This type is incompatible with
 79: class F extends React.Component<{children: Array<number>}> {}
                                                      ^^^^^^ number

Error: create_element.js:86
 86: React.createElement(F, {}, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 79: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 86: React.createElement(F, {}, ...[]); // Error
                            ^^ object literal

Error: create_element.js:87
 87: React.createElement(F, {}, ...[1]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 79: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     87: React.createElement(F, {}, ...[1]); // Error
                                        ^ number. This type is incompatible with
     79: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:89
 89: React.createElement(F, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 79: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     79: class F extends React.Component<{children: Array<number>}> {}
                                                          ^^^^^^ number. This type is incompatible with
     79: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:89
 89: React.createElement(F, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 79: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     89: React.createElement(F, {}, ...(any: Array<number>)); // Error
                                             ^^^^^^^^^^^^^ undefined. This type is incompatible with
     79: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:89
 89: React.createElement(F, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 79: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     89: React.createElement(F, {}, ...(any: Array<number>)); // Error
                                                   ^^^^^^ number. This type is incompatible with
     79: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:90
 90: React.createElement(F, {}, 1, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 79: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     90: React.createElement(F, {}, 1, ...[]); // Error
                                    ^ number. This type is incompatible with
     79: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:92
 92: React.createElement(F, {}, 1, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
 79: class F extends React.Component<{children: Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
     92: React.createElement(F, {}, 1, ...(any: Array<number>)); // Error
                                    ^ number. This type is incompatible with
     79: class F extends React.Component<{children: Array<number>}> {}
                                                    ^^^^^^^^^^^^^ array type

Error: create_element.js:95
 95: React.createElement(G, {}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 94: class G extends React.Component<{children: number | Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
 95: React.createElement(G, {}); // Error
                            ^^ object literal

Error: create_element.js:100
100: React.createElement(G, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
100: React.createElement(G, {}, [1, 2], [3, 4]); // Error
                                ^^^^^^ array literal. This type is incompatible with
 94: class G extends React.Component<{children: number | Array<number>}> {}
                                                               ^^^^^^ number

Error: create_element.js:100
100: React.createElement(G, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
100: React.createElement(G, {}, [1, 2], [3, 4]); // Error
                                        ^^^^^^ array literal. This type is incompatible with
 94: class G extends React.Component<{children: number | Array<number>}> {}
                                                               ^^^^^^ number

Error: create_element.js:101
101: React.createElement(G, {}, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
 94: class G extends React.Component<{children: number | Array<number>}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
101: React.createElement(G, {}, ...[]); // Error
                            ^^ object literal

Error: create_element.js:104
104: React.createElement(G, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
104: React.createElement(G, {}, ...(any: Array<number>)); // Error
                                         ^^^^^^^^^^^^^ undefined. This type is incompatible with
 94: class G extends React.Component<{children: number | Array<number>}> {}
                                                ^^^^^^^^^^^^^^^^^^^^^^ union: number | array type
  Member 1:
   94: class G extends React.Component<{children: number | Array<number>}> {}
                                                  ^^^^^^ number
  Error:
  104: React.createElement(G, {}, ...(any: Array<number>)); // Error
                                           ^^^^^^^^^^^^^ undefined. This type is incompatible with
   94: class G extends React.Component<{children: number | Array<number>}> {}
                                                  ^^^^^^ number
  Member 2:
   94: class G extends React.Component<{children: number | Array<number>}> {}
                                                           ^^^^^^^^^^^^^ array type
  Error:
  104: React.createElement(G, {}, ...(any: Array<number>)); // Error
                                           ^^^^^^^^^^^^^ undefined. This type is incompatible with
   94: class G extends React.Component<{children: number | Array<number>}> {}
                                                           ^^^^^^^^^^^^^ array type

Error: create_element.js:115
115: React.createElement(G2, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
115: React.createElement(G2, {}, [1, 2], [3, 4]); // Error
                                 ^^^^^^ array literal. This type is incompatible with
109: class G2 extends React.Component<{children?: number | Array<number>}> {}
                                                                 ^^^^^^ number

Error: create_element.js:115
115: React.createElement(G2, {}, [1, 2], [3, 4]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
115: React.createElement(G2, {}, [1, 2], [3, 4]); // Error
                                         ^^^^^^ array literal. This type is incompatible with
109: class G2 extends React.Component<{children?: number | Array<number>}> {}
                                                                 ^^^^^^ number

Error: create_element.js:126
126: React.createElement(H, {}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
125: class H extends React.Component<{children: NumberArrayRecursive}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
126: React.createElement(H, {}); // Error
                            ^^ object literal

Error: create_element.js:132
132: React.createElement(H, {}, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
125: class H extends React.Component<{children: NumberArrayRecursive}> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
132: React.createElement(H, {}, ...[]); // Error
                            ^^ object literal

Error: create_element.js:135
135: React.createElement(H, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
135: React.createElement(H, {}, ...(any: Array<number>)); // Error
                                         ^^^^^^^^^^^^^ undefined. This type is incompatible with
125: class H extends React.Component<{children: NumberArrayRecursive}> {}
                                                ^^^^^^^^^^^^^^^^^^^^ union: number | array type
  Member 1:
  124: type NumberArrayRecursive = number | Array<NumberArrayRecursive>;
                                   ^^^^^^ number
  Error:
  135: React.createElement(H, {}, ...(any: Array<number>)); // Error
                                           ^^^^^^^^^^^^^ undefined. This type is incompatible with
  124: type NumberArrayRecursive = number | Array<NumberArrayRecursive>;
                                   ^^^^^^ number
  Member 2:
  124: type NumberArrayRecursive = number | Array<NumberArrayRecursive>;
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ array type
  Error:
  135: React.createElement(H, {}, ...(any: Array<number>)); // Error
                                           ^^^^^^^^^^^^^ undefined. This type is incompatible with
  124: type NumberArrayRecursive = number | Array<NumberArrayRecursive>;
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ array type

Error: create_element.js:143
143: React.createElement(I, {}, null); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
140: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    143: React.createElement(I, {}, null); // Error
                                    ^^^^ null. This type is incompatible with
    140: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:145
145: React.createElement(I, {}, 1, 2); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
140: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    145: React.createElement(I, {}, 1, 2); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    140: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:148
148: React.createElement(I, {}, ...[1, 2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
140: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    148: React.createElement(I, {}, ...[1, 2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    140: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:149
149: React.createElement(I, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
140: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    149: React.createElement(I, {}, ...(any: Array<number>)); // Error
                                             ^^^^^^^^^^^^^ React children array, undefined, or array. This type is incompatible with
    140: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:151
151: React.createElement(I, {}, 1, ...[2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
140: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    151: React.createElement(I, {}, 1, ...[2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    140: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:152
152: React.createElement(I, {}, 1, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
140: class I extends React.Component<{children?: number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    152: React.createElement(I, {}, 1, ...(any: Array<number>)); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array or number. This type is incompatible with
    140: class I extends React.Component<{children?: number}> {}
                                                     ^^^^^^ number

Error: create_element.js:155
155: React.createElement(J, {}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
154: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
155: React.createElement(J, {}); // Error
                            ^^ object literal

Error: create_element.js:159
159: React.createElement(J, {}, 1, 2); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
154: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    159: React.createElement(J, {}, 1, 2); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    154: class J extends React.Component<{children: ?number}> {}
                                                     ^^^^^^ number

Error: create_element.js:160
160: React.createElement(J, {}, ...[]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
154: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ property `children`. Property not found in
160: React.createElement(J, {}, ...[]); // Error
                            ^^ object literal

Error: create_element.js:162
162: React.createElement(J, {}, ...[1, 2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
154: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    162: React.createElement(J, {}, ...[1, 2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    154: class J extends React.Component<{children: ?number}> {}
                                                     ^^^^^^ number

Error: create_element.js:163
163: React.createElement(J, {}, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
154: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    163: React.createElement(J, {}, ...(any: Array<number>)); // Error
                                             ^^^^^^^^^^^^^ React children array, undefined, or array. This type is incompatible with
    154: class J extends React.Component<{children: ?number}> {}
                                                     ^^^^^^ number

Error: create_element.js:165
165: React.createElement(J, {}, 1, ...[2]); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
154: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    165: React.createElement(J, {}, 1, ...[2]); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array. This type is incompatible with
    154: class J extends React.Component<{children: ?number}> {}
                                                     ^^^^^^ number

Error: create_element.js:166
166: React.createElement(J, {}, 1, ...(any: Array<number>)); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
154: class J extends React.Component<{children: ?number}> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    166: React.createElement(J, {}, 1, ...(any: Array<number>)); // Error
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React children array or number. This type is incompatible with
    154: class J extends React.Component<{children: ?number}> {}
                                                     ^^^^^^ number

Error: create_element.js:172
172: React.createElement(K, {}, '42'); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
168: class K extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    172: React.createElement(K, {}, '42'); // Error
                                    ^^^^ string. This type is incompatible with
    168: class K extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:173
173: React.createElement(K, {children: '42'}); // Error
                            ^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
168: class K extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    173: React.createElement(K, {children: '42'}); // Error
                                           ^^^^ string. This type is incompatible with
    168: class K extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:174
174: React.createElement(K, {children: '42'}, 42); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
168: class K extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    174: React.createElement(K, {children: '42'}, 42); // Error
                                           ^^^^ string. This type is incompatible with
    168: class K extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:176
176: React.createElement(K, {children: '42'}, '42'); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
168: class K extends React.Component<{children: number}> {}
                                     ^^^^^^^^^^^^^^^^^^ object type
  Property `children` is incompatible:
    176: React.createElement(K, {children: '42'}, '42'); // Error
                                           ^^^^ string. This type is incompatible with
    168: class K extends React.Component<{children: number}> {}
                                                    ^^^^^^ number

Error: create_element.js:189
189: React.createElement(L, {}, 1); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
                                     v
178: class L extends React.Component<{
179:   foo: number,
180:   bar: number,
181:   children: number,
182: }> {
     ^ property `foo`. Property not found in
189: React.createElement(L, {}, 1); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element

Error: create_element.js:190
190: React.createElement(L, {children: 1}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
                                     v
178: class L extends React.Component<{
179:   foo: number,
180:   bar: number,
181:   children: number,
182: }> {
     ^ property `foo`. Property not found in
190: React.createElement(L, {children: 1}); // Error
                            ^^^^^^^^^^^^^ object literal

Error: create_element.js:191
191: React.createElement(L, {bar: 1}, 2); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
                                     v
178: class L extends React.Component<{
179:   foo: number,
180:   bar: number,
181:   children: number,
182: }> {
     ^ property `foo`. Property not found in
191: React.createElement(L, {bar: 1}, 2); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element

Error: create_element.js:192
192: React.createElement(L, {bar: 1, children: 2}); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call of method `createElement`
                                     v
178: class L extends React.Component<{
179:   foo: number,
180:   bar: number,
181:   children: number,
182: }> {
     ^ property `foo`. Property not found in
192: React.createElement(L, {bar: 1, children: 2}); // Error
                            ^^^^^^^^^^^^^^^^^^^^^ object literal

Error: create_element.js:193
193: React.createElement(L, {foo: '1', bar: 2}, 3); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
                                     v
178: class L extends React.Component<{
179:   foo: number,
180:   bar: number,
181:   children: number,
182: }> {
     ^ object type
  Property `foo` is incompatible:
    193: React.createElement(L, {foo: '1', bar: 2}, 3); // Error
                                      ^^^ string. This type is incompatible with
    179:   foo: number,
                ^^^^^^ number

Error: create_element.js:194
194: React.createElement(L, {foo: '1', bar: 2, children: 3}); // Error
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
                                     v
178: class L extends React.Component<{
179:   foo: number,
180:   bar: number,
181:   children: number,
182: }> {
     ^ object type
  Property `foo` is incompatible:
    194: React.createElement(L, {foo: '1', bar: 2, children: 3}); // Error
                                      ^^^ string. This type is incompatible with
    179:   foo: number,
                ^^^^^^ number

Error: create_element.js:195
195: React.createElement(L, {foo: 1, bar: '2'}, 3); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
                                     v
178: class L extends React.Component<{
179:   foo: number,
180:   bar: number,
181:   children: number,
182: }> {
     ^ object type
  Property `bar` is incompatible:
    195: React.createElement(L, {foo: 1, bar: '2'}, 3); // Error
                                              ^^^ string. This type is incompatible with
    180:   bar: number,
                ^^^^^^ number

Error: create_element.js:196
196: React.createElement(L, {foo: 1, bar: '2', children: 3}); // Error
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
                                     v
178: class L extends React.Component<{
179:   foo: number,
180:   bar: number,
181:   children: number,
182: }> {
     ^ object type
  Property `bar` is incompatible:
    196: React.createElement(L, {foo: 1, bar: '2', children: 3}); // Error
                                              ^^^ string. This type is incompatible with
    180:   bar: number,
                ^^^^^^ number

Error: create_element.js:197
197: React.createElement(L, {foo: 1, bar: 2}, '3'); // Error
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element. This type is incompatible with
                                     v
178: class L extends React.Component<{
179:   foo: number,
180:   bar: number,
181:   children: number,
182: }> {
     ^ object type
  Property `children` is incompatible:
    197: React.createElement(L, {foo: 1, bar: 2}, '3'); // Error
                                                  ^^^ string. This type is incompatible with
    181:   children: number,
                     ^^^^^^ number

Error: create_element.js:198
198: React.createElement(L, {foo: 1, bar: 2, children: '3'}); // Error
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ object literal. This type is incompatible with
                                     v
178: class L extends React.Component<{
179:   foo: number,
180:   bar: number,
181:   children: number,
182: }> {
     ^ object type
  Property `children` is incompatible:
    198: React.createElement(L, {foo: 1, bar: 2, children: '3'}); // Error
                                                           ^^^ string. This type is incompatible with
    181:   children: number,
                     ^^^^^^ number


Found 74 errors
